--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,19 +6,29 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid h-100 page-container">
+    <div class="row justify-content-center bg-white">
+        <div class="col-12 col-md-6 my-auto text-center page-title">
+            <h1>{% trans "Password Reset" %}</h1>
+            <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+        </div>
+    </div>
 
-    <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
     <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <div class="row justify-content-center">
+        <div class="col-6 mt-2">
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <input type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
