--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -54,14 +54,24 @@
 
         <div class="col-12 col-sm-6 col-md-4 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
-                <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product_category.product.image }}" alt="{{product_category.product.name}} image">
-                <div class="tile-overlay">
-                    <div class="tile-title p-2">
+                <a href="{% url 'view_product' product_category.product.id %}">
+                    <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product_category.product.image }}" alt="{{product_category.product.name}} image">
+                <!-- <div class="tile-overlay"> -->
+                    <!-- <div class="tile-title p-2">
                         <a href="{% url 'view_product' product_category.product.id %}">
                             <h6>{{product_category.product.name}}</h6>
                         </a>
-                    </div>
+                    </div> -->
  
+                <!-- </div> -->
+                </a>
+                <div class="d-flex justify-content-between align-items-center tile-detail">
+                <a class="mx-3" href="{% url 'view_product' product_category.product.id %}">
+                    <h6 class="my-auto">{{product_category.product.name}}</h6>
+                </a>
+                <p class="mx-3 my-auto">
+                    £{{product_category.product.price}}
+                </p>
                 </div>
             </div>
 
