--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -62,9 +62,9 @@
 
 
 
-        <div class="col-sm-6 col-md-3 col-xxl-3 pt-2 pb-2">
-            <div class="card text-bg-dark  ratio-4x3">
-                <img class="img-thumbnail shop-tile rounded-3" src="/media/{{category.image }}" alt="{{category.name}} image">
+        <div class="col-sm-6 col-md-6 col-lg-3 col-xxl-3 pt-2 pb-2">
+            <div class="card text-bg-dark ratio-4x3">
+                <a href="{% url 'all_products'%}?category={{category.name}}"><img class="img-thumbnail shop-tile rounded-3" src="/media/{{category.image }}" alt="{{category.name}} image"></a>
                 <div class="tile-overlay">
                     <div class="tile-title p-2">
                         <a href="{% url 'all_products'%}?category={{category.name}}">
