--- a/static/css/base.css
+++ b/static/css/base.css
@@ -92,17 +92,24 @@ td {
     display:flex;
     align-items: center;
     justify-content:center;
+    pointer-events: none;
 }
 
 .tile-title{
     vertical-align: middle;
-    background-color: black;
-    opacity: 0.8;
+    background-color: rgb(0, 0, 0, 0.4);
+    /* opacity: 0.8; */
 }
 
 .tile-title a{
     text-decoration: none;
     color:white;
+}
+
+.tile-detail a {
+    font-family:"Chelsea Market", sans-serif;
+    color:black !important;
+    text-decoration: none;
 }
 
 
