--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -11,6 +11,7 @@
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>{% trans "Password Reset" %}</h1>
             <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
         </div>
     </div>
 
@@ -18,15 +19,15 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    
     <div class="row justify-content-center">
         <div class="col-6 mt-2">
             <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <input type="submit" value="{% trans 'Reset My Password' %}" />
+                <input class="btn btn-black rounded-0 text-uppercase category-icons mt-2" type="submit" value="{% trans 'Reset My Password' %}" />
             </form>
-
+        <br>
         <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
         </div>
     </div>
