--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -58,8 +58,8 @@
                                     </button>
                                 </div>
 
-                                <input class="form-control qty_input fs-4 rounded-3" type="number" name="quantity" value="1" min="1"
-                                    max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                <input class="form-control qty_input fs-4 rounded-3" type="number" name="quantity" value="0" min="0"
+                                    max="{{stock_check | stock_left:product}}" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                             
                                 <div class="input-group-append">
                                     <button class="increment-qty btn btn-black"
