--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,17 +5,27 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+<div class="container-fluid h-100 page-container">
+  <div class="row justify-content-center bg-white">
+    <div class="col-12 col-md-6 my-auto text-center page-title">
+      <h1>
+        {% trans "Sign Out" %}
+      </h1>
+      <p>{% trans 'Are you sure you want to sign out?' %}</p>
+    </div>
+  </div>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+  <div class="row justify-content-center">
+    <div class="col-6 mt-2">
+      <form method="post" action="{% url 'account_logout' %}">
+        {% csrf_token %}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <button class="btn btn-black rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans 'Sign Out' %}</button>
+      </form>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
-
+    </div>
+  </div>
+</div>
 {% endblock %}
