--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -11,7 +11,7 @@
                 {{ message }}
             </div>
         </div>
-        {% if grand_total and not on_profile_page %}
+        {% if grand_total and quantity and not on_profile_page %}
             <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
             <div>
                 {% for item in bag_items %}
