--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -18,7 +18,7 @@
 
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'all_products' %}">Cancel</a>
-                    <button class="btn btn-black rounder-0" type="submit">Edit product</button>
+                    <button class="btn  rounder-0" type="submit">Edit product</button>
                 </div>
             </form>
         </div>
