--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -199,14 +199,14 @@
         <div class="row justify-content-center">
 			<div class="col-12 col-lg-7 text-right">
                 {% if from_profile %}
-                <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                <a href="{% url 'profile' %}" class="btn  rounded-0 my-2">
                     <span class="icon mr-2">
                         <i class="fas fa-gifts"></i>
                     </span>
                     <span class="text-uppercase">Return to your profile</span>
                 </a>
                 {% else %}
-                    <a href="{% url 'shop' %}" class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'shop' %}" class="btn  rounded-0 my-2">
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
