--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -25,8 +25,8 @@
         {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-          <a class="primaryAction btn btn-black rounded-0 text-uppercase category-icons mt-2" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-          <button class="primaryAction btn btn-black rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans "Sign In" %}</button>
+          <a class="primaryAction btn  rounded-0 text-uppercase category-icons mt-2" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+          <button class="primaryAction btn  rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans "Sign In" %}</button>
       </form>
     </div>
   </div>
