--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -25,7 +25,7 @@
             <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <input class="btn btn-black rounded-0 text-uppercase category-icons mt-2" type="submit" value="{% trans 'Reset My Password' %}" />
+                <input class="btn  rounded-0 text-uppercase category-icons mt-2" type="submit" value="{% trans 'Reset My Password' %}" />
             </form>
         <br>
         <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
