--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -24,7 +24,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-black rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans "Sign Up" %}</button>
+        <button class="btn rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans "Sign Up" %}</button>
         
       </form>
     </div>
