change the tense of the intro paragraph

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,9 +9,9 @@
                 Welcome to Cowley Pottery!
             </h1>
             <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                Welcome to Cowley Pottery. In the heart of Devon, we craft by hand all pieces from scratch in our
                 tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
+                the shop. You can also find out more about our journey and craft on the About page.
                 <br>
                 Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
             </p>
