--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,15 +7,16 @@
 {% block content %}
 <div class="container-fluid h-100 page-container">
   <div class="row justify-content-center bg-white">
-      <div class="col-12 col-md-6 my-auto text-center page-title">
-          <h1>
-            {% trans "Sign Up" %}
-          </h1>
-          <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-      </div>
+    <div class="col-12 col-md-6 my-auto text-center page-title">
+      <h1>
+        {% trans "Sign Up" %}
+      </h1>
+      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+      </p>
+    </div>
   </div>
 
-  
+
   <div class="row justify-content-center">
     <div class="col-6 mt-2">
       <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
@@ -25,7 +26,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <button class="btn rounded-0 text-uppercase category-icons mt-2" type="submit">{% trans "Sign Up" %}</button>
-        
+
       </form>
     </div>
   </div>
