--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -39,7 +39,7 @@
                     </ul>
                 </li>
                 <li class="list-inline-item">
-                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                    <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link"
                         href="{% url 'view_bag' %}">
                         <div class="text-center">
                             <div><i class="bi bi-bag"></i></div>
