remove commented out code from css file

--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -46,7 +46,7 @@
                         alt="{{category.name}} image"></a>
                 <div class="tile-overlay">
                     <div class="tile-title p-2">
-                        <a href="{% url 'all_products'%}?category={{category.name}}">
+                        <a class="blue-hover" href="{% url 'all_products'%}?category={{category.name}}">
                             <h6>{{category.readable_name}}</h6>
                         </a>
                     </div>
