--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,7 +66,7 @@
                 <!-- </div> -->
                 </a>
                 <div class="d-flex justify-content-between align-items-center tile-detail">
-                <a class="mx-3" href="{% url 'view_product' product_category.product.id %}">
+                <a class="mx-3 blue-hover" href="{% url 'view_product' product_category.product.id %}">
                     <h6 class="my-auto">{{product_category.product.name}}</h6>
                 </a>
                 <p class="mx-3 my-auto">
