--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
@@ -46,40 +46,39 @@
             <a href="{% url 'all_products' %}?category=decorative">Decorative
             </a>
         </div>
-             
+
     </div>
-    <div class="row h-100 justify-content-center px-2">
-        
+    <div class="row h-100 justify-content-center">
+        {% if product_categories %}
         {% for product_category in product_categories %}
 
         <div class="col-12 col-sm-6 col-md-4 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
                 <a href="{% url 'view_product' product_category.product.id %}">
-                    <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product_category.product.image }}" alt="{{product_category.product.name}} image">
-                <!-- <div class="tile-overlay"> -->
-                    <!-- <div class="tile-title p-2">
-                        <a href="{% url 'view_product' product_category.product.id %}">
-                            <h6>{{product_category.product.name}}</h6>
-                        </a>
-                    </div> -->
- 
-                <!-- </div> -->
+                    <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product_category.product.image }}"
+                        alt="{{product_category.product.name}} image">
                 </a>
                 <div class="d-flex justify-content-between align-items-center tile-detail">
-                <a class="mx-3 blue-hover" href="{% url 'view_product' product_category.product.id %}">
-                    <h6 class="my-auto">{{product_category.product.name}}</h6>
-                </a>
-                <p class="mx-3 my-auto">
-                    £{{product_category.product.price}}
-                </p>
+                    <a class="mx-3 blue-hover" href="{% url 'view_product' product_category.product.id %}">
+                        <h6 class="my-auto">{{product_category.product.name}}</h6>
+                    </a>
+                    <p class="mx-3 my-auto">
+                        £{{product_category.product.price}}
+                    </p>
                 </div>
             </div>
 
         </div>
-
-
-
         {% endfor %}
+        {% else %}
+        <div class="row justify-content-center bg-white my-3">
+            <div class="col-12 col-md-6 my-auto text-center page-title">
+                <h2>There's nothing new at the moment</h2>
+                <p>Click <a href="{% url 'all_products' %}">here</a> to see the current stock
+                </p>
+            </div>
+        </div>
+        {% endif %}
 
     </div>
 </div>
