--- a/home/templates/home/landing.html
+++ b/home/templates/home/landing.html
@@ -3,12 +3,12 @@
 
 {% block content %}
     <div class="container-fluid vh-100 text-center text-white" id="landing-image">
-        <div class="row h-50 align-items-center">
-            <div class="col">
+        <!-- <div class="row h-50 align-items-center">
+            <div class="col bg-dark">
                 <h1 >Cowley Pottery</h1>
                 <h4 >Handmade pottery lovingly made in the heart of Devon</h3>
                 <a href="{% url 'home' %}">Enter</a>
             </div>
-        </div>
+        </div> -->
     </div>
 {% endblock %}
