--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row text-center bg-white">
         <h1>Product Management</h1>
         <h5>Edit product</h5>
