--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,7 +25,7 @@ td {
 }
 
 #landing-image{
-    background:url(/media/landing_placeholder.jpg);
+    background:url(/media/splash.jpg);
     background-position: center top;
     background-size: cover;
 }
