test: change file paths of images as they currently are incorrect

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'about' %}">
-                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="/media/helenwheel2.jpeg" alt="Pottery examples">
+                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="{{ MEDIA_URL }}helenwheel2.jpeg" alt="Pottery examples">
                 </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
