--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -42,7 +42,7 @@
         <div class="col-sm-6 col-md-6 col-lg-3 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark ratio-4x3">
                 <a href="{% url 'all_products'%}?category={{category.name}}"><img
-                        class="img-thumbnail shop-tile rounded-3" src="/media/{{category.image }}"
+                        class="img-thumbnail shop-tile rounded-3" src="{{ MEDIA_URL }}{{category.image }}"
                         alt="{{category.name}} image"></a>
                 <div class="tile-overlay">
                     <div class="tile-title p-2">
