testing deploying of images with h1 tag on index page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,9 +19,11 @@
         </div>
     </div>
     <div class="row justify-content-center px-2 pb-5">
+        <h1>{{MEDIA_URL}}</h1>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'about' %}">
+                    
                     <img class="img-fluid rounded-3 tile-image img-thumbnail" src="{{ MEDIA_URL }}helenwheel2.jpeg" alt="Pottery examples">
                 </a>
             </div>
