change media urls and add MEDIA_URL contexts processor

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row justify-content-center px-2 py-3">
         <div class="col-12 col-lg-6 mx-auto d-flex justify-content-center">
-            <img class="img-fluid img-thumbnail" src="/media/about.jpg">
+            <img class="img-fluid img-thumbnail" src="{{ MEDIA_URL }}about.jpg">
         </div>
         <div class="col-12 col-lg-6 about-text">
         <p>
