--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -55,7 +55,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
                 <a href="{% url 'view_product' product_category.product.id %}">
-                    <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product_category.product.image }}"
+                    <img class="img-thumbnail shop-tile rounded-3" src="{{ MEDIA_URL }}{{product_category.product.image }}"
                         alt="{{product_category.product.name}} image">
                 </a>
                 <div class="d-flex justify-content-between align-items-center tile-detail">
