--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -21,7 +21,7 @@
 
         <div class="col-12 col-sm-6 col-md-4 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
-                <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product.image }}"
+                <img class="img-thumbnail shop-tile rounded-3" src="{{ MEDIA_URL }}{{product.image }}"
                     alt="{{product.name}} image">
             </div>
 
