--- a/templates/includes/header_landing.html
+++ b/templates/includes/header_landing.html
@@ -1,12 +1,12 @@
 <header class="container-fluid fixed-top">
     <div class="row justify-content-between bg-dark">
-        <div class="col-3"></div>
-        <div class="col-6 bg-dark text-white text-center">
+        <div class="d-none d-sm-block col-3"></div>
+        <div class="col-12 col-md-6 bg-dark text-white text-center">
                 <h1 >Cowley Pottery</h1>
-                <h4 >Handmade pottery lovingly made in the heart of Devon</h3>
+                <h4 class="d-none d-md-block" >Handmade pottery lovingly made in the heart of Devon</h3>
             </div>
-        <div class="col-3">
-            <ul class="nav justify-content-end">
+        <div class="col-12 col-md-3 text-center">
+            <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link text-white blue-hover" href="https://www.facebook.com/people/Cowley-Pottery/100086994200228/" rel="noopener" target="_blank" aria-label="Go to our Facebook page (opens in a new tab)" ><i class="bi bi-facebook"></i></a>
                 </li>
