add readme screenshots

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
                 <p>
                     Cowley Pottery is my passion project with all pieces made by my hands in my little studio.
                     <br>
-                    If you'd like to hear more about my story please click here
+                    This section will tell you all about my story and how I started pottery
                 </p>
             </div>
         </div>
