--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container-fluid h-100 page-container">
-    <div class="row text-center bg-white">
+    <div class="row text-center bg-white page-title">
         <h1>Shopping Bag</h1>
     </div>
     <div class="row justify-content-center">
@@ -40,8 +40,6 @@
 
 
                             <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.product.id  %}">
-                            <!-- <form class="form update-form" method="POST" action="javascript:alert( 'success!' );">  -->
-
                                 {% csrf_token %} 
                                 <div class="form-group">
                                     <div class="input-group">
@@ -72,11 +70,8 @@
                                     {{stock_check | stock_left:item.product}}
                                 </p>
                             </form>
-                            
-                            <!-- <div class= "d-flex justify-content-around"> -->
                             <a class="update-link text-info"><small>Update</small></a>
                             <a class="remove-item text-danger" id="remove_{{ item.product.id }}"><small>Remove</small></a>
-                            <!-- </div> -->
                         </td>
                         <td class="py-3">
                             <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
@@ -117,7 +112,7 @@
             </div>
             {% else %}
             <p class="text-center fs-4 mt-3">Your bag is empty.</p>
-            <div class="text-end">
+            <div class="text-center">
                 <span class="btn  rounded-0 text-uppercase category-icons mt-2">
                     <a href="{% url 'shop' %}">
                         <span class="text-uppercase">Keep Shopping</span>
@@ -136,7 +131,6 @@
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
-        console.log("woopsie");
         var form = $(this).prev('.update-form');
         // var form = $(this).prev();
         // var form = $('.update-form');
