--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -30,7 +30,7 @@
     <div class="row justify-content-around">
         <div class="col-12 col-md-6 col-xxl-4">
             <div class="col-5 col-md-3 col-xl-1 category-icons text-center mx-1 px-0 py-3 mt-2">
-                <a href="{% url 'all_products' %}">All products
+                <a href="{% url 'all_products' %}">All items
                 </a>
             </div>
         </div>
