--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -17,7 +17,7 @@
 
   <div class="row justify-content-center">
     <div class="col-6 mt-2">
-      <form method="post" action="{% url 'account_logout' %}">
+      <form class="d-flex justify-content-around" method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
