--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -7,7 +7,7 @@
             <address>
                 <div>
                     <ul>
-                        <li><a href="mailto:cowleypottery@gmail.com">Email: cowleypottery@gmail.com</a></li>
+                        <li><a class="text-dark" href="mailto:cowleypottery@gmail.com">Email: cowleypottery@gmail.com</a></li>
                         <li>Cowley</li>
                         <li>Kilmington</li>
                         <li>Axminster</li>
@@ -43,7 +43,6 @@
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                         <h2>Join our newsletter </h2>
-                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                         <div class="mc-field-group">
                             <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
                             </label>
