--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -4,9 +4,6 @@
 {% block content %}
 <div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
-        <!-- <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
-        </div> -->
         <div class="col-12 col-md-6 my-auto text-center">
             <h1>
                 Welcome to Cowley Pottery
@@ -55,7 +52,8 @@
         <div class="col-12 col-sm-6 col-md-4 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
                 <a href="{% url 'view_product' product_category.product.id %}">
-                    <img class="img-thumbnail shop-tile rounded-3" src="{{ MEDIA_URL }}{{product_category.product.image }}"
+                    <img class="img-thumbnail shop-tile rounded-3"
+                        src="{{ MEDIA_URL }}{{product_category.product.image }}"
                         alt="{{product_category.product.name}} image">
                 </a>
                 <div class="d-flex justify-content-between align-items-center tile-detail">
