--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,11 @@
 <head>
   <!-- Required meta tags -->
   {% block meta %}
-  <meta http-equiv="X-UA-Compatible" contents="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
   {% endblock %}
 
   <!-- Bootstrap CSS -->
