--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -62,7 +62,7 @@
                                     class="button">
                                 <p class="brandingLogo"><a href="http://eepurl.com/iheQnb"
                                         title="Mailchimp - email marketing made easy and fun"><img
-                                            src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                                            src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg" alt="Mailchimp chimp logo"></a>
                                 </p>
                             </div>
                         </div>
