--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -18,16 +18,19 @@
                             <th scope="col">Product Info</th>
                             <th scope="col" class="d-none d-sm-table-cell"></th>
                             <th scope="col">Price</th>
-                            <th scope="col">Qty</th>
+                            <th scope="col">Number in bag</th>
+                            <th scope="col">Update quantity</th>
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
 
                     {% for item in bag_items %}
+                    <div id="item_bag_qty_{{item.product.id}}" class="d-none">{{item.product.stock}}</div>
                     <tr class="text-center">
                         <td class="p-3 w-25 d-none d-sm-table-cell">
                             {% if item.product.image %}
-                            <img class="img-fluid img-thumbnail shop-tile rounded" src="{{ item.product.image.url }}" alt="{{item.product.name}}">
+                            <img class="img-fluid img-thumbnail shop-tile rounded" src="{{ item.product.image.url }}"
+                                alt="{{item.product.name}}">
                             {% endif %}
                         </td>
                         <td class="py-3">
@@ -36,42 +39,49 @@
                         <td class="py-3">
                             <p class="my-0">£{{ item.product.price }}</p>
                         </td>
+                        <!-- <td class="py-3 w-25">
+                            <p id="item_bag_qty_{{item.product.id}}" class="my-0">{{ item.quantity }}</p>
+                        </td> -->
                         <td class="py-3 w-25">
 
 
-                            <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.product.id  %}">
-                                {% csrf_token %} 
+                            <form class="form update-form" method="POST"
+                                action="{% url 'adjust_bag' item.product.id  %}">
+                                {% csrf_token %}
                                 <div class="form-group">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn " 
-                                                data-item_id="{{ item.product.id }}" id="decrement-qty_{{ item.product.id }}">
+                                            <button class="decrement-qty btn " data-item_id="{{ item.product.id }}"
+                                                id="decrement-qty_{{ item.product.id }}">
                                                 <span class="icon fs-2">
                                                     <i class="bi bi-patch-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-        
-                                        <input class="form-control qty_input fs-4 rounded-3" type="number" name="quantity" value="1" min="1"
-                                            max="{{stock_check | stock_left:item.product}}" data-item_id="{{ item.product.id }}" id="id_qty_{{ item.product.id }}">
-                                    
+
+                                        <input class="form-control qty_input fs-4 rounded-3" type="number"
+                                            name="quantity" value="{{item.quantity}}" min="0"
+                                            max="{{stock_check | stock_left:item.product}}"
+                                            data-item_id="{{ item.product.id }}" id="id_qty_{{ item.product.id }}">
+
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn "
-                                                data-item_id="{{ item.product.id }}" id="increment-qty_{{ item.product.id }}">
+                                            <button class="increment-qty btn " data-item_id="{{ item.product.id }}"
+                                                id="increment-qtybag_{{ item.product.id }}">
                                                 <span class="icon fs-2">
                                                     <i class="bi bi-patch-plus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        
+
                                     </div>
                                 </div>
-                                <p id="stock_qty_{{item.product.id}}" class="d-none"> -->
+                                <p id="stock_qty_{{item.product.id}}" class="d-none">
                                     {{stock_check | stock_left:item.product}}
                                 </p>
                             </form>
                             <a class="update-link text-info"><small>Update</small></a>
-                            <a class="remove-item text-danger" id="remove_{{ item.product.id }}"><small>Remove</small></a>
+                            <a class="remove-item text-danger"
+                                id="remove_{{ item.product.id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
                             <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
@@ -130,7 +140,7 @@
 
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         // var form = $(this).prev();
         // var form = $('.update-form');
@@ -144,17 +154,19 @@
     // })
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         // var size = $(this).data('size');
         var url = `/bag/remove/${itemId}/`;
         // var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
-        var data = {'csrfmiddlewaretoken': csrfToken}
+        var data = {
+            'csrfmiddlewaretoken': csrfToken
+        }
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
 
