add email settings.py

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -12,24 +12,34 @@
     </div>
     <div class="row justify-content-center px-2 py-3">
         <div class="col-12 col-lg-6 mx-auto d-flex justify-content-center">
-            <img class="img-fluid img-thumbnail" src="{{ MEDIA_URL }}about.jpg" alt="Picture of the owner of Cowley Pottery in her studio">
+            <img class="img-fluid img-thumbnail" src="{{ MEDIA_URL }}about.jpg"
+                alt="Picture of the owner of Cowley Pottery in her studio">
         </div>
         <div class="col-12 col-lg-6 about-text">
-        <p>
-            I was late coming to the pottery party. It was first suggested to me as a new hobby by my daughter whilst
-            she was at university. I was finding the empty nest hard to deal with. Rather than try pottery I decided to
-            travel and spent several years seeing the world. This all came to a crashing halt with covid. A chance
-            sighting of an advert for pottery classes peaked my interest. I signed up and had the good fortune to meet
-            Jane who took me through the basics of wheel throwing and hand building. At the end of 6 weeks, which is 2
-            weeks on the wheel and 2 weeks hand building and 2 weeks glazing I was beginning to think I can do this. I
-            signed up for another 6 weeks. Things moved on a pace after that. My husband built me a studio, I bought a
-            wheel and a kiln and started my obsession with clay.
-
-            Cowley pottery is my studio in beautiful East Devon. I take my inspiration from the rolling green
-            countryside and the glorious beaches. Organic and altered forms. I love wheel throwing, seeing how far I can
-            take the clay and I am always striving to become better.
-        </p>
-    </div>
+            <p>
+                I was late coming to the pottery party. It was first suggested to me as a new hobby by my daughter
+                whilst
+                she was at university - I was finding the empty nest hard to deal with. Rather than try pottery I
+                decided to
+                travel and spent several years seeing the world. This all came to a crashing halt with Covid. Then a
+                chance
+                sighting of an advert for pottery classes peaked my interest. I signed up and had the good fortune of
+                meeting my friend
+                Jane who took me through the basics of wheel throwing and hand building. At the end of 6 weeks of
+                classes - 2
+                weeks on the wheel, 2 weeks hand building and 2 weeks glazing - I was beginning to think "I can do
+                this" so I
+                signed up for another 6 weeks! Things moved at a pace after that. My husband built me a studio, I bought
+                a
+                wheel and a kiln and started my obsession with clay.
+                <br>
+                <br>
+                Cowley pottery is my studio in beautiful East Devon. I take my inspiration from the rolling green
+                countryside and the glorious beaches. Organic and altered forms. I love wheel throwing, seeing how far I
+                can
+                take the clay and I am always striving to become better.
+            </p>
+        </div>
     </div>
 </div>
 {% endblock %}
