--- a/commissions/templates/commissions/commissions.html
+++ b/commissions/templates/commissions/commissions.html
@@ -17,7 +17,7 @@
         <div class="col-12 col-sm-6">
             <p class="mt-3">
                 If you see something on the website that is out of stock, or you want something bespoke or personalised,
-                fill in the form below and I will get back to you as soon as possible.
+                fill in the form below and we will get back to you as soon as possible.
             </p>
             <form class="mt-3" action="{% url 'commissions' %}" method="POST">
                 {% csrf_token %}
