--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,11 +9,11 @@
                 Welcome to Cowley Pottery!
             </h1>
             <p>
-                Welcome to Cowley Pottery. In the heart of Devon, we craft by hand all pieces from scratch in our
+                In the heart of Devon, we craft by hand all pieces from scratch in our
                 tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
                 the shop. You can also find out more about our journey and craft on the About page.
                 <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+                Feel free to get in contact about any pieces you want but are unavailable and we'll get back to you.
             </p>
 
         </div>
@@ -31,9 +31,9 @@
                     <a href="{% url 'about' %}">About</a>
                 </h2>
                 <p>
-                    Cowley Pottery is my passion project with all pieces made by my hands in my little studio.
+                    Cowley Pottery is Helen's passion project with all pieces made by her in her little studio.
                     <br>
-                    This section will tell you all about my story and how I started pottery
+                    This section will tell you all about her story and how she started pottery.
                 </p>
             </div>
         </div>
@@ -64,8 +64,8 @@
                     <a href="{% url 'commissions' %}">Commissions</a>
                 </h2>
                 <p>
-                    I'm happy to create items that are personalised or follow your specifications. On this page you will
-                    find a form to enter you details and request and I will get back to you
+                    We're happy to create items that are personalised or follow your specifications. On this page you will
+                    find a form to enter your details and request and we will get back to you.
                 </p>
             </div>
         </div>
