--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,11 +9,11 @@
                 Welcome to Cowley Pottery
             </h1>
             <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                In the heart of Devon, Helen crafts by hand all pieces from scratch in her
                 tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
                 the shop. You can also find out more about Helen's journey and craft on the About page.
                 <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+                Feel free to get in contact about any pieces you want but are unavailable and we'll get back to you.
             </p>
 
         </div>
