testing, deployment and readme

--- a/templates/base_landing.html
+++ b/templates/base_landing.html
@@ -7,9 +7,9 @@
     {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="An e-commerce shop and gallery of Cowley Pottery, a homemade Pottery store, based in the South West of England, in Devon. Creating bespoke ceramics, plates, bowls, ideal for gifts">
+        <meta name="keywords" content="Homemade, Pottery, Ceramics, Plates, Bowls, Mugs, Bespoke Pottery, Pottery Commissions, Art, Pottery Studio, Made in Devon, Made in Somerset, Made in the South West, gift, gift for mum, pottery classes">
     {% endblock %}
 
     <!-- Bootstrap CSS -->
