remove landing page and update image sizing

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
             <div class="tile-image-container">
                 <a href="{% url 'about' %}">
                     
-                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="{{ MEDIA_URL }}helenwheel2.jpeg" alt="Image link of a picture of the owner of Cowley Pottery">
+                    <img class="img-fluid rounded-3 tile-image" src="{{ MEDIA_URL }}helenwheel3.jpg" alt="Image link of a picture of the owner of Cowley Pottery">
                 </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
@@ -40,7 +40,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'shop' %}">
-                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="{{ MEDIA_URL }}bluemugfade.jpg" alt="Image link of a mug and tableware">
+                    <img class="img-fluid rounded-3 tile-image" src="{{ MEDIA_URL }}bluemugfade.jpg" alt="Image link of a mug and tableware">
                 </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
@@ -55,7 +55,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'commissions' %}">
-                <img class="img-fluid rounded-3 tile-image image-top-align img-thumbnail" src="{{ MEDIA_URL }}dwarvesfire.JPG"
+                <img class="img-fluid rounded-3 tile-image image-top-align" src="{{ MEDIA_URL }}dwarvesfire.JPG"
                     alt="Picture of a fireplace with Christmas gnomes on top">
                 </a>
             </div>
